k8s/dxc/setup/security-policy.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: services-inkijk-development
spec:
  host: "*.services-inkijk-development.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: services-inkijk-test
spec:
  host: "*.services-inkijk-test.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
